# MMC-filetransfer

./: .gitignore  README.md  pyproject.toml  setup.py
MMC/: settings.py
MMC/cli/: cli.py  cli.yaml  commands.py
MMC/experimental/: test.ipynb
MMC/lib/: config.py  email.py  groups.py  logger_settings.py  scipion_workflow.py  session.py  storage.py  transfer.py
MMC/preprocess/: commands.py  groups.py  session.py
MMC/restAPI/: auth.py  groups.py  main.py  sessions.py
MMC/restAPI/templates/: base.html  home.html  login.html
MMC/restAPI/templates/groups/: groups.html
MMC/restAPI/templates/sessions/: find.html
Template_files/: index.php  workflow.yaml  workflow_full.json  workflow_full.yaml  workflow_template copy.json  workflow_template.json
config/: affiliations.yaml  env-template  scopes.yaml  storageLocations.yaml
frontend/: package-lock.json  package.json
frontend/mmc-vue/: .env.template  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  vue.config.js
frontend/mmc-vue/src/: App.vue  main.js  store.js
frontend/mmc-vue/src/components/: GroupDetails.vue  LogFile.vue  LogLine.vue  Login.vue  MMCGroups.vue  NewGroup.vue  NewProject.vue  SessionDetail.vue  SessionList.vue  SetupRun.vue  TransferControl.vue
frontend/mmc-vue/src/plugins/: fectchingAPI.js  patchingAPI.js  postingAPI.js
